fix spacing for #site-name element

--- a/css/less/header.less
+++ b/css/less/header.less
@@ -33,10 +33,10 @@ header #logo {
 #site-name {
   margin: 0;
   float: left;
-  margin: 6px 0 0 4px;
   padding-right: 35px;
   a {
     color: @white;
+    line-height: 60px;
   }
 }
 
